assets/css/styles.scss
---
---

@import "variables";
@import "bootstrap";

body {
  padding-top: 50px;
  font-family: "Open Sans", -apple-system, system-ui, "Segoe UI" !important;
}

.navbar {
	border-bottom: 5px solid $teal !important;
}

h1 {
  margin-bottom: 20px;
  padding-bottom: 9px;
  border-bottom: 1px solid #eee;
}

.tutorial-title {
  margin-bottom: 20px;
  padding-bottom: 9px;
  border-bottom: 1px solid #eee;
}

.landing-title {
  padding-bottom: 9px;
  border-bottom: 1px solid #eee;
}

.sidebar {
  position: fixed;
  top: 57px;
  bottom: 0;
  left: 0;
  z-index: 1000;
  padding: 20px;
  overflow-x: hidden;
  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
  border-right: 1px solid #eee;
}

.sidebar {
  padding-left: 0;
  padding-right: 0;
}

.sidebar .nav {
  margin-bottom: 20px;
}

.sidebar .nav-item {
  width: 100%;
}

.sidebar .nav-item + .nav-item {
  margin-left: 0;
}

.sidebar .nav-link {
  border-radius: 0;
  color: $brand-primary;
}

.button-nav {
  position: fixed;
  bottom: 1.9375rem;
}

.btn-purple {
  color: $white;
  background-color: $purple;
  border: $purple;
}

a.btn {
  white-space: normal !important;
}

#mobileNav .nav-link {
  display: block;
  padding: .5em 1em;
  border-radius: 0;
}

#mobileNav .navbar-nav {
  width: 100% !important;
  padding-top: 1rem;
  padding-bottom: 0.5rem;
  color: $brand-primary;
}

.nav-link {
  cursor: pointer;
}

.dropdown-item {
  cursor: pointer;
}

a.navbar-text {
  text-decoration: none;
}

.card {
  margin-top: 1rem;
  cursor: pointer;
}

.card:hover {
  background-color: $brand-primary;
  .card-title {
    color: $white !important;
  }
}

pre {
  padding: 1.25rem;
  overflow: auto;
  word-wrap: normal;
  background-color: $gray-lightest;
  border: 1px solid #eee;
  border-radius: 6px;
}

span.navbar-brand {
  > a {
    display: inline-block;
    margin-right: 1rem;
    font-size: 1.25rem;
    line-height: inherit;
    color: $white;
    white-space: nowrap;
    text-decoration: none;
  }
}

